<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_2x_padding" >

        <!-- General info and DD attribution -->

        <TextView
            style="@style/AboutMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_2x_padding"
            android:text="@string/about_overall_title" />

        <TextView
            style="@style/AboutMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_overall_desc" />

        <TextView
            android:id="@+id/dd_url"
            style="@style/GetStartedMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/about_link_selector"
            android:paddingBottom="@dimen/default_2x_padding"
            android:paddingTop="@dimen/default_2x_padding"
            android:text="@string/about_dd_url" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:paddingBottom="@dimen/default_2x_padding"
            android:src="@drawable/dd_powered" />

        <!-- Library list -->

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/calendar_default_divider_height"
            android:layout_marginBottom="@dimen/default_2x_padding"
            android:background="@color/aiga_grey_1" />

        <TextView
            style="@style/AboutMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_2x_padding"
            android:text="@string/about_libraries_title" />

        <TextView
            style="@style/AboutMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_2x_padding"
            android:text="@string/about_libraries_desc" />

        <TextView
            style="@style/AboutMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_2x_padding"
            android:text="@string/about_library_name_supportv4" />

        <TextView
            style="@style/AboutMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_library_name_square" />

        <TextView
            android:id="@+id/square_url"
            style="@style/GetStartedMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/about_link_selector"
            android:text="@string/about_library_url_square" />

        <!-- Apache License Title and Description -->

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/calendar_default_divider_height"
            android:layout_marginBottom="@dimen/default_2x_padding"
            android:layout_marginTop="@dimen/default_2x_padding"
            android:background="@color/aiga_grey_1" />

        <TextView
            style="@style/AboutMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_2x_padding"
            android:text="@string/about_licenses_apache_title" />

        <TextView
            style="@style/AboutMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_licenses_apache_desc1" />

        <TextView
            android:id="@+id/apache_url"
            style="@style/GetStartedMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/about_link_selector"
            android:paddingBottom="@dimen/default_2x_padding"
            android:paddingTop="@dimen/default_2x_padding"
            android:text="@string/about_licenses_apache_url" />
    </LinearLayout>

</ScrollView>