<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.aiga.events.android.views.EventDetailsScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/aiga_grey_1"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/image_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/details_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:background="@color/aiga_white"
                    android:contentDescription="@string/events_thumbnail_image_desc"
                    android:scaleType="fitXY" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_xlarge_size"
                    android:layout_marginBottom="@dimen/default_xlarge_size"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility="gone" />
            </FrameLayout>

            <RelativeLayout
                android:id="@+id/details_get_tickets_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/aiga_black_1" >

                <TextView
                    android:id="@+id/details_price"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_2x_padding"
                    android:textColor="@color/aiga_white" >
                </TextView>

                <TextView
                    android:id="@+id/details_get_tickets_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/link_selector_dark"
                    android:padding="@dimen/default_2x_padding"
                    android:text="@string/details_get_tickets_link_text"
                    android:textColor="@color/aiga_blue" />
            </RelativeLayout>

            <!-- The placeholder_header is used for the sticky header component -->

            <View
                android:id="@+id/placeholder_header"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:orientation="horizontal" >
            </View>

            <LinearLayout
                android:id="@+id/linear_detail_view"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_half_padding"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:id="@+id/details_location_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_half_padding"
                    android:layout_weight="1"
                    android:background="@drawable/link_selector_light"
                    android:padding="@dimen/default_padding" >

                    <ImageView
                        android:id="@+id/details_location_logo_image"
                        android:layout_width="@dimen/details_icon_size"
                        android:layout_height="@dimen/details_icon_size"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:contentDescription="@string/events_thumbnail_image_desc"
                        android:src="@drawable/location" />

                    <TextView
                        android:id="@+id/details_location_title"
                        style="@android:style/TextAppearance.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/details_location_logo_image"
                        android:paddingLeft="@dimen/default_half_padding"
                        android:text="@string/details_text_description_title"
                        android:textColor="@color/aiga_grey_3" />

                    <TextView
                        android:id="@+id/details_location_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/details_location_title"
                        android:layout_toRightOf="@id/details_location_logo_image"
                        android:ellipsize="end"
                        android:maxLines="4"
                        android:paddingLeft="@dimen/default_half_padding"
                        android:textColor="@color/aiga_grey_3"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:id="@+id/details_location_mapit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:paddingRight="@dimen/default_padding"
                        android:text="@string/details_map_action"
                        android:textColor="@color/aiga_blue" />
                </RelativeLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_marginRight="@dimen/default_2x_padding"
                    android:background="@color/aiga_white" />

                <RelativeLayout
                    android:id="@+id/details_datetime_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_half_padding"
                    android:layout_weight="1"
                    android:background="@drawable/link_selector_light"
                    android:padding="@dimen/default_padding" >

                    <ImageView
                        android:id="@+id/details_datetime_logo_image"
                        android:layout_width="@dimen/details_icon_size"
                        android:layout_height="@dimen/details_icon_size"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:contentDescription="@string/events_thumbnail_image_desc"
                        android:src="@drawable/calendar" />

                    <TextView
                        android:id="@+id/details_datetime_title"
                        style="@android:style/TextAppearance.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/details_datetime_logo_image"
                        android:paddingLeft="@dimen/default_half_padding"
                        android:text="@string/details_text_datetime_title"
                        android:textColor="@color/aiga_grey_3" />

                    <TextView
                        android:id="@+id/details_datetime_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/details_datetime_title"
                        android:layout_toRightOf="@id/details_datetime_logo_image"
                        android:paddingLeft="@dimen/default_half_padding"
                        android:textColor="@color/aiga_grey_3"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:id="@+id/details_description_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:paddingRight="@dimen/default_padding"
                        android:text="@string/details_add_action"
                        android:textColor="@color/aiga_blue" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/aiga_white" />

            <WebView
                android:id="@+id/detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/default_2x_padding"
                android:paddingRight="@dimen/default_2x_padding" />
        </LinearLayout>
    </com.aiga.events.android.views.EventDetailsScrollView>

    <!-- The header lives outside of the ScrollView to support the sticky header -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/sticky_header_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/aiga_grey_1"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/aiga_black_1" />

            <TextView
                android:id="@+id/title"
                style="@android:style/TextAppearance.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_padding"
                android:layout_marginLeft="@dimen/default_2x_padding"
                android:layout_marginRight="@dimen/default_2x_padding"
                android:layout_marginTop="@dimen/default_padding"
                android:textAllCaps="true"
                android:textColor="@color/aiga_black_3"
                android:textStyle="bold"
                android:typeface="sans" />

            <View
                android:id="@+id/sticky_header_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/aiga_white"
                android:paddingTop="@dimen/default_half_padding" />
        </LinearLayout>

        <View
            android:id="@+id/sticky_header_dropshadow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_half_padding"
            android:layout_below="@id/sticky_header_body"
            android:background="@drawable/default_drop_shadow" />
    </RelativeLayout>

</FrameLayout>